# webstore_project

./: .env.sample  README.md  catalog_data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_contactdata.py  0003_alter_category_name_alter_product_name.py  0004_version.py  0005_alter_product_change_date_alter_product_create_date.py  0006_product_owner.py  0007_alter_product_options_product_is_published.py
catalog/templates/catalog/: add_product.html  base.html  category_list.html  contactdata_list.html  contacts.html  home.html  product.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: main_menu.html
catalog/templatetags/: catalog_tags.py
config/: settings.py  urls.py
congig/: settings.py
src/: index.html  main.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: create_content_manager.py  create_groups.py  create_moderator.py  csu.py
users/migrations/: 0001_initial.py  0002_user_code_alter_user_is_active.py
users/templates/users/: login.html  register.html  restore_password_form.html  user_form.html  verification_form.html
