[tool.poetry]
name = "webstore-project"
version = "0.1.0"
description = ""
authors = ["Uliana Semyonova <i@ulianasemyonova.ru>"]
readme = "README.md"
packages = [{include = "webstore_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
pillow = "^10.0.0"
psycopg2 = "^2.9.7"
ipython = "^8.14.0"
pytils = "^0.4.1"
django-crispy-forms = "^2.0"
crispy-bootstrap4 = "^2022.1"
redis = "^5.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
